crates/pgls_pretty_print/tests/snapshots/multi/tests__errors_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/errors.sql
snapshot_kind: text
---
SELECT 1;

SELECT;

SELECT * FROM nonesuch;

SELECT nonesuch FROM pg_database;

SELECT * FROM pg_database WHERE nonesuch = pg_database.datname;

SELECT * FROM pg_database WHERE pg_database.datname = nonesuch;

SELECT DISTINCT ON ( foobar) * FROM pg_database;

SELECT NULL FROM pg_database GROUP BY datname FOR UPDATE;

SELECT NULL FROM pg_database GROUP BY GROUPING SETS (()) FOR UPDATE;

DELETE FROM nonesuch;

DROP TABLE "nonesuch";

ALTER TABLE nonesuch RENAME TO newnonesuch;

ALTER TABLE nonesuch RENAME TO stud_emp;

ALTER TABLE stud_emp RENAME TO student;

ALTER TABLE stud_emp RENAME TO stud_emp;

ALTER TABLE nonesuchrel RENAME COLUMN nonesuchatt TO newnonesuchatt;

ALTER TABLE emp RENAME COLUMN nonesuchatt TO newnonesuchatt;

ALTER TABLE emp RENAME COLUMN salary TO manager;

ALTER TABLE emp RENAME COLUMN salary TO ctid;

ROLLBACK;

COMMIT;

CREATE AGGREGATE newavg2
(
  sfunc = int4pl,
  basetype = INT,
  stype = INT,
  finalfunc = int2um,
  initcond = '0'
);

CREATE AGGREGATE newcnt1 ( sfunc = int4inc, stype = INT, initcond = '0');

DROP INDEX "nonesuch";

DROP AGGREGATE newcnt(nonesuch);

DROP AGGREGATE nonesuch(INT);

DROP AGGREGATE newcnt(REAL);

DROP FUNCTION nonesuch();

DROP TYPE nonesuch;

DROP OPERATOR === (INT, INT);

DROP OPERATOR = (nonesuch, INT);

DROP OPERATOR = (INT, nonesuch);

DROP RULE "nonesuch" ON "noplace";

SELECT 1 / 0;

SELECT CAST(1 AS BIGINT) / 0;

SELECT 1 / CAST(0 AS BIGINT);

SELECT CAST(1 AS SMALLINT) / 0;

SELECT 1 / CAST(0 AS SMALLINT);

SELECT CAST(1 AS NUMERIC) / 0;

SELECT 1 / CAST(0 AS NUMERIC);

SELECT CAST(1 AS DOUBLE PRECISION) / 0;

SELECT 1 / CAST(0 AS DOUBLE PRECISION);

SELECT CAST(1 AS REAL) / 0;

SELECT 1 / CAST(0 AS REAL);
